fix: decrease roadmap section mobile padding

--- a/components/FlexibleContent/Modules/Roadmap/RoadmapHero.module.sass
+++ b/components/FlexibleContent/Modules/Roadmap/RoadmapHero.module.sass
@@ -1,7 +1,6 @@
 .CopyCont
 
     p
-        font-size: 22px
         line-height: 1.3
         font-weight: 400
         font-family: var(--font-atyp-text)
